--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
+    "marked": "^17.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
