--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-ai-simple-demo",
+  "name": "angular-ai-gemini-masterclass-1",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
