--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "private": true,
   "packageManager": "npm@10.9.3",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
+    "@angular/common": "^21.1.0-rc.0",
+    "@angular/compiler": "^21.1.0-rc.0",
+    "@angular/core": "^21.1.0-rc.0",
+    "@angular/forms": "^21.1.0-rc.0",
+    "@angular/platform-browser": "^21.1.0-rc.0",
+    "@angular/router": "^21.1.0-rc.0",
     "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "marked": "^17.0.1",
@@ -36,9 +36,9 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular/build": "^21.1.0-rc.0",
+    "@angular/cli": "^21.1.0-rc.0",
+    "@angular/compiler-cli": "^21.1.0-rc.0",
     "@tailwindcss/postcss": "^4.1.12",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
